# solaredge-modbus-multi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  hacs.json  pyproject.toml  pytest.ini  requirements_test.txt  setup.cfg  setup.py
.claude/tasks/: gold-tier-roadmap.md  performance-optimization.md
.github/workflows/: linter.yml  test.yml  tests.yml
custom_components/solaredge_modbus_multi/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  devices.py  diagnostics.py  entity.py  exceptions.py  helpers.py  hub.py  manifest.json  modbus_transport.py  number.py  quality_scale.yaml  repairs.py  scanner.py  select.py  sensor.py  strings.json  switch.py
custom_components/solaredge_modbus_multi/translations/: en.json  es.json
tests/: __init__.py  conftest.py  fake_modbus_server.py  test_config_flow.py  test_decode_golden.py  test_diagnostics.py  test_entity_golden.py  test_helpers.py  test_hub.py  test_init.py  test_number.py  test_phase1_regressions.py  test_poll_budget.py  test_repairs.py  test_scanner.py  test_select.py  test_sensor.py  test_switch.py  test_tiered_polling.py
tests/fixtures/: __init__.py  decode_golden.json  entity_golden.json
